2000-08-04  Michael Meeks  <michael@helixcode.com>

	* folder-browser-factory.c (control_activate): release the ui_handler
	after set_container.

2000-08-03  Michael Meeks  <michael@helixcode.com>

	* mail-config.c (identity_page_new): only whack the sig in if the
	file exists.

	* component-factory.c (factory_fn): count running instances,
	attach destroy signal (factory_destroy): add. 

	* main.c (main): pass orb around.

2000-08-03  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (composer_send_cb): Yay, no more compiler warnings

	* mail-config.c: set config = NULL
	(provider_list) Eek! Initialize news to NULL!  Also, use
	g_slist_prepend() for "performance" gains ;-)
	(init_config): Set the config member data to NULL just to be on
	the safe side
	(clear_config): Don't bother freeing slist data if the slist is
	NULL

2000-08-03  Peter Williams  <peterw@helixcode.com>

	* main.c (main): One more gconf reference to take out...

	* mail-ops.c (composer_send_cb): Check for an identity before
	sending.
	
2000-08-03  JP Rosevear  <jpr@helixcode.com>

	* mail-config.glade: Increase window size slightly, rename
	"Transport" to "Mail Transport"

	* mail-config.c (init_config): Remove gconf references
	(clear_config): ditto
	(read_config): ditto
	(write_config): ditto
	(mail_config): Null provider lists before filling them
	(mail_config_druid): ditto
	(identity_page_new): Increase spacing of vbox
	(service_page_new): ditto

	* Makefile.am: Remove gconf references. 

2000-08-02  Dan Winship  <danw@helixcode.com>

	* mail-config.c (service_page_item_new): Make the "test settings"
	button FILL rather than SHRINK so it doesn't end up oddly-placed.

	* mail-config-druid.glade: Make the icon background dark blue
	like the surrounding area.

2000-08-02  Christopher James Lahey  <clahey@helixcode.com>

	* mail-ops.c, message-list.c: Emit "model_pre_change" where
	appropriate.

2000-08-02  Peter Williams  <peterw@helixcode.com>
